[project]
name = "GMClustering"
version = "0.1.0"
authors = [
  { name="James Edmond", email="edmondandy795@gmail.com" },
]
description = "Uses a pipeline of unsupervised methods to partition global magnetospheric data from MMS and THEMIS measurements"
readme = "README.md"
requires-python = ">=3.5"
license = { file = "LICENSE.txt" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scipy==1.11.1",
    "scikit-learn==1.3.0",
    "xpysom==1.0.7",
    "matplotlib>=3.7",#"matplotlib==3.8.0",
    "seaborn>=0.12",#"seaborn==0.12.2"
    "tqdm>=4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["src"]
#
#[tool.setuptools.package-data]
#mypkg = ["*.csv", "*.pkl"]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"gmclustering.data" = ["*.csv"]
"gmclustering.models" = ["*.pkl"]

